# steam-optionx

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  flake.nix  shell.nix
src/: api.rs  appmanifest_acf.rs  consts.rs  egui.rs  libraryfolders_vdf.rs  localconfig_vdf.rs  main.rs  vdf.rs
src-tauri/: tauri.conf.json
style/: output.css
tests/: localconfig.vdf
ui/: main.slint
