[package]
name = "steam-optionx"
version = "0.1.0"
authors = ["RoGreat <roguegreat@gmail.com>"]
edition = "2024"

[dependencies]
chrono = "0.4.40"
confy = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
directories = "6.0.0"
keyvalues-serde = "0.2.2"
leptos = { version = "0.8.2", features = ["csr"] }
leptos-struct-table = { version = "0.15.0", features = ["chrono"] }
log = "0.4.27"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
webbrowser = "1.0.4"
