[package]
name = "steam-optionx"
version = "0.1.0"
authors = ["RoGreat <roguegreat@gmail.com>"]
edition = "2024"

[dependencies]
confy = "1.0.0"
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
keyvalues-serde = "0.2.2"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
