[package]
name = "steam-optionx"
description = "Modify app launch options in Steam's config file"
version = "0.6.1"
license = "MIT"
repository = "https://github.com/RoGreat/steam-optionx"
edition = "2024"

[package.metadata.winresource]
FileDescription = "Steam OptionX"
LegalCopyright = "Copyright © 2025"

[dependencies]
confy = "1.0.0"
directories = "6.0.0"
eframe = "0.31.1"
egui_extras = "0.31.1"
keyvalues-serde = "0.2.2"
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
serde_json = "1.0.141"
strum = "0.27.1"
strum_macros = "0.27.1"

[build-dependencies]
winresource = "0.1.22"
